# figlet_forge

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Eidos_Manifesto.txt  LICENSE  MANIFEST.in  Makefile  README.md  check_compatibility.py  custom_clones_settings.json  debug_font_loading.py  demo_text.txt  dev-requirements.txt  eidos_figlet_forge_manifesto.py  eidosian_figlet_install.md  example_banner  example_output.md  figlet-forge.code-workspace  figlet_forge_setup.sh  figlet_man_pages.md  get_figlet_fonts.py  global_info.py  pyproject.toml  requirements.txt  setup.py  setup_fonts.py  test_compat.py  test_fix.py  test_font.sh
docs/: USER_GUIDE.md  figfont.md  figlet_forge.1  index.md
examples/: advanced_api_usage.py  ascii_to_svg_example.py  compatibility_example.py
figlet_forge/: __init__.py  __main__.py  test.py
figlet_forge/tests/: test_cli.py
src/figlet_forge/: __init__.py  __main__.py  figlet.py  figlet_string.py  showcase.py  test.py  unicode_cmd.py  version.py
src/figlet_forge.egg-info/: SOURCES.txt  requires.txt
src/figlet_forge/cli/: __init__.py  main.py  sample.py  showcase.py  showcase_helpers.py
src/figlet_forge/color/: __init__.py  effects.py  figlet_color.py
src/figlet_forge/compat/: __init__.py  colour_adjuster.py  encoding_adjuster.py  figlet_compat.py  terminal_adjuster.py
src/figlet_forge/core/: __init__.py  exceptions.py  figlet_builder.py  figlet_font.py  figlet_string.py  utils.py
src/figlet_forge/fonts/: __init__.py
src/figlet_forge/render/: __init__.py  figlet_engine.py
src/figlet_forge/tools/: figlet_forge  recursive_type_check.py
src/figlet_forge/utils/: __init__.py  file_utils.py
tests/: __init__.py  conftest.py  test.py  test_cli.py  test_compat.py  test_complete_functionality.py  test_suite_runner.py
tests/compat/: __init__.py  test_color_adjuster.py  test_compat.py  test_cross_platform.py  test_encoding_compat.py  test_exceptions_compat.py  test_figlet_compat.py  test_pyfiglet_compat.py  test_terminal_compat.py
tests/fonts/: test_font_loading.py
tests/integration/: test_cli_integration.py  test_cli_options.py  test_compat_integration.py  test_exceptions.py  test_helpers.py  test_main.py
tests/unit/: test_cli_options.py  test_color.py  test_color_effects.py  test_exceptions.py  test_figlet.py  test_recursive_typer.py  test_showcase.py  test_utils.py
tools/: figlet_forge  figlet_forge_example
